--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -174,10 +174,15 @@
      "output_type": "stream",
      "text": [
       "('basic', 'box')\n",
+      "data folder created: /home/zeged/catkin_ws/src/stonefish_scene_generator/data/basic/box\n",
       "('basic', 'sphere')\n",
+      "data folder created: /home/zeged/catkin_ws/src/stonefish_scene_generator/data/basic/sphere\n",
       "('basic', 'cylindar')\n",
+      "data folder created: /home/zeged/catkin_ws/src/stonefish_scene_generator/data/basic/cylindar\n",
       "('basic', '2019')\n",
-      "('basic', '2020')\n"
+      "data folder created: /home/zeged/catkin_ws/src/stonefish_scene_generator/data/basic/2019\n",
+      "('basic', '2020')\n",
+      "data folder created: /home/zeged/catkin_ws/src/stonefish_scene_generator/data/basic/2020\n"
      ]
     }
    ],
@@ -200,8 +205,12 @@
     "    # create category folder\n",
     "    category_folder_path = os.path.join(data_folder_path, category)\n",
     "    create_folder(category_folder_path)\n",
+    "    # create main_subject folder\n",
+    "    main_subject_folder_path = os.path.join(category_folder_path, main_subject)\n",
+    "    create_folder(main_subject_folder_path)\n",
     "    # create a new scene\n",
-    "    scene = make_a_scene(category, main_subject)"
+    "    scene = make_a_scene(category, main_subject)\n",
+    "    scene_file_full_path = os.path.join(main_subject_folder_path, main_subject)"
    ]
   },
   {
@@ -235,15 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_file_path = os.path.join(data_folder_path, title + '.scn')\n",
-    "f = open(scene_file_path, \"w\")\n",
-    "f.write(scene)\n",
-    "f.close()"
+    "def save_scene_to_file(scene, scene_file_full_path):\n",
+    "    f = open(scene_file_full_path + '.scn', \"w\")\n",
+    "    f.write(scene)\n",
+    "    f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
